# Uniseq

./: .gitignore  .taurignore  AGENT.md  BACKEND_ARCHITECTURE.md  Cargo.toml  PLANS_USED_SO_FAR.md  README.md  SYNC_SERVICE_SMOKE_TEST.md  du.exe.stackdump  h  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
.claude/: settings.local.json
.opencode/plans/: fix-block-end-marker.md  fix-delete-key-behavior.md
architecture_new_uniseq/: AGENT_HANDOFF.md  README.md
architecture_new_uniseq/app-shell/: README.md  editor.md  react-vite.md  settings-onboarding.md  state-routing.md  tauri.md
architecture_new_uniseq/engine/: README.md  api-boundary.md  caching.md  indexing.md  modules.md  writes.md
architecture_new_uniseq/features/: README.md  focus.md  graph.md  journal.md  pages.md  tasks.md  (+4 more)
architecture_old_logseq/: README.md
crates/uniseq_engine/: Cargo.toml
crates/uniseq_engine/src/: assets.rs  cache.rs  events.rs  feature_surfaces.rs  graph.rs  index.rs  lib.rs  model.rs  page_identity.rs  parser.rs  plugins.rs  query.rs  settings.rs  sync.rs  workspace.rs  writes.rs
crates/uniseq_engine/tests/: engine_gaps.rs  roadmap_acceptance.rs
promo/: info.md
roadmap/: README.md  phase-01-workspace-markdown-contract.md  phase-02-parsing-page-identity.md  phase-03-indexing-query-cache.md  phase-04-canonical-write-path.md  phase-05-core-ui-surfaces.md  phase-06-navigation-settings-onboarding-assets.md  phase-07-sync-conflict-flows.md  phase-08-logseq-compatibility-migration.md  phase-09-extended-features-platforms-plugins.md
scripts/: make-portable-zip.ps1
src/: api.rs  events.rs  index.rs  lib.rs  main.tsx  model.rs  parser.rs  query.rs  styles.css  workspace.rs  writer.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  lib.rs  main.rs  sync.rs
tests/: common.rs  index_query.rs  parsing_identity.rs  workspace_contract.rs  write_path.rs
web/: .env  index.html  package-lock.json  package.json  vite.config.js
(+141 files in other folders)
