[package]
name = "uniseq-desktop"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "uniseq_desktop_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "uniseq-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
uniseq-backend = { path = ".." }
