[package]
name = "uniseq-desktop"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "uniseq_desktop_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "uniseq-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
uniseq-backend = { path = ".." }
open = "5"
