[package]
name = "uniseq-app"
version = "0.1.9"
edition = "2024"
publish = false

[lib]
name = "uniseq_app_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "uniseq-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
uniseq-backend = { path = ".." }
open = "5"
