[package]
name = "uniseq_engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
